# jrl-walkgen

./: .gitignore  CMakeLists.txt  README.md  package.xml
doc/: Doxyfile.extra.in
src/: Clock.cpp  Clock.hh  Debug.hh  PatternGeneratorInterfacePrivate.cpp  SimplePlugin.cpp  SimplePlugin.hh  SimplePluginManager.cpp  SimplePluginManager.hh  StepStackHandler.cpp  StepStackHandler.hh  patterngeneratorinterfaceprivate.hh  pgtypes.cpp  privatepgtypes.cpp  privatepgtypes.hh
src/FootTrajectoryGeneration/: FootTrajectoryGenerationAbstract.cpp  FootTrajectoryGenerationAbstract.hh  FootTrajectoryGenerationMultiple.cpp  FootTrajectoryGenerationMultiple.hh  FootTrajectoryGenerationStandard.cpp  FootTrajectoryGenerationStandard.hh  LeftAndRightFootTrajectoryGenerationMultiple.cpp  LeftAndRightFootTrajectoryGenerationMultiple.hh  OnLineFootTrajectoryGeneration.cpp  OnLineFootTrajectoryGeneration.h
src/GlobalStrategyManagers/: CoMAndFootOnlyStrategy.cpp  CoMAndFootOnlyStrategy.hh  DoubleStagePreviewControlStrategy.cpp  DoubleStagePreviewControlStrategy.hh  GlobalStrategyManager.cpp  GlobalStrategyManager.hh
src/Mathematics/: AnalyticalZMPCOGTrajectory.cpp  AnalyticalZMPCOGTrajectory.hh  Bsplines.cpp  Bsplines.hh  ConvexHull.cpp  ConvexHull.hh  FootConstraintsAsLinearSystem.cpp  FootConstraintsAsLinearSystem.hh  FootHalfSize.cpp  FootHalfSize.hh  OptCholesky.cpp  OptCholesky.hh  PLDPHerdt.cpp  PLDPSolver.cpp  PLDPSolver.hh  PLDPSolverHerdt.hh  Polynome.cpp  Polynome.hh  PolynomeFoot.cpp  PolynomeFoot.hh  StepOverPolynome.cpp  StepOverPolynome.hh  intermediate-qp-matrices.cpp  intermediate-qp-matrices.hh  qld.cpp  qld.hh  relative-feet-inequalities.cpp  relative-feet-inequalities.hh
src/MotionGeneration/: CollisionDetector.cpp  CollisionDetector.hh  ComAndFootRealization.hh  ComAndFootRealizationByGeometry.cpp  ComAndFootRealizationByGeometry.hh  GenerateMotionFromKineoWorks.cpp  GenerateMotionFromKineoWorks.hh  StepOverPlanner.cpp  StepOverPlanner.hh  UpperBodyMotion.cpp  UpperBodyMotion.hh  WaistHeightVariation.cpp  WaistHeightVariation.hh
src/MultiContactRefTrajectoryGeneration/: MultiContactHirukawa.cc  MultiContactHirukawa.hh
src/PreviewControl/: LinearizedInvertedPendulum2D.cpp  LinearizedInvertedPendulum2D.hh  OptimalControllerSolver.cpp  OptimalControllerSolver.hh  PreviewControl.cpp  PreviewControl.hh  SupportFSM.cpp  SupportFSM.hh  SupportFSM_backup.hh  ZMPPreviewControlWithMultiBodyZMP.cpp  ZMPPreviewControlWithMultiBodyZMP.hh  rigid-body-system.cpp  rigid-body-system.hh  rigid-body.cpp  rigid-body.hh
src/RobotDynamics/: pinocchiorobot.cpp
src/ZMPRefTrajectoryGeneration/: AnalyticalMorisawaAbstract.cpp  AnalyticalMorisawaAbstract.hh  AnalyticalMorisawaCompact.cpp  AnalyticalMorisawaCompact.hh  DynamicFilter.cpp  DynamicFilter.hh  FilteringAnalyticalTrajectoryByPreviewControl.cpp  FilteringAnalyticalTrajectoryByPreviewControl.hh  OrientationsPreview.cpp  OrientationsPreview.hh  ZMPConstrainedQPFastFormulation.cpp  ZMPConstrainedQPFastFormulation.hh  ZMPDiscretization.cpp  ZMPDiscretization.hh  ZMPQPWithConstraint.cpp  ZMPQPWithConstraint.hh  ZMPRefTrajectoryGeneration.cpp  ZMPRefTrajectoryGeneration.hh  ZMPVelocityReferencedQP.cpp  ZMPVelocityReferencedQP.hh  (+14 more)
test_result/: file_display.py  file_displayFPGI.py
tests/: CMakeLists.txt  ClockCPUTime.cpp  ClockCPUTime.hh  CommonTools.cpp  CommonTools.hh  DumpReferencesObjects.cpp  DumpReferencesObjects.hh  ReadDataForNovela.cpp  TestBsplines.cpp  TestFootPrintPGInterface.cpp  TestFootPrintPGInterfaceData.cpp  TestFootPrintPGInterfaceData.h  TestHerdt2010.cpp  TestHirukawa2007.cpp  TestInverseKinematics.cpp  TestKajita2003.cpp  TestKajitaDynamicFilter.cpp  TestMorisawa2007.cpp  TestMulticontactInverseGeometry.cpp  TestNaveau2015.cpp  TestObject.cpp  TestObject.hh  TestOptCholesky.cpp  TestRiccatiEquation.cpp  talos_wpg.srdf
(+11 files in other folders)
